--- a/Designer/Interface/Service/Property.xaml
+++ b/Designer/Interface/Service/Property.xaml
@@ -21,7 +21,7 @@
 	</Grid.RowDefinitions>
 	<TextBlock Text="{Binding Path=PropertyData.Declaration}" FontSize="14pt" Margin="0,5" Grid.Row="0" />
 	<Label Grid.Row="1" Content="Data Type:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="80" />
-	<Data:TypeSelector OpenType="{Binding Path=PropertyData.ReturnType}" Project="{Binding Path=ServiceProject}"  Grid.Row="1" Margin="85,5,0,5" />
+	<Data:TypeSelector OpenType="{Binding Path=PropertyData.ReturnType, Mode=TwoWay}" Project="{Binding Path=ServiceProject}"  Grid.Row="1" Margin="85,5,0,5" />
 	<Label Content="Name:" Grid.Row="2" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="80" />
 	<pc:TextBox Text="{Binding Path=PropertyData.ServerName}" Name="Name" Grid.Row="2" Height="23" Margin="85,5,0,5" ToolTip="{Binding Path=PropertyData.ServerName}" />
 	<Label Grid.Row="3" Content="Options" FontSize="12pt" Margin="0,5,0,0" />
