--- a/Designer/Interface/Data/TypeEditor.xaml
+++ b/Designer/Interface/Data/TypeEditor.xaml
@@ -39,11 +39,11 @@
 			<ComboBoxItem>Protected Internal</ComboBoxItem>
 			<ComboBoxItem>Private</ComboBoxItem>
 		</ComboBox>
-		<CheckBox IsChecked="{Binding Path=OpenType.Partial, FallbackValue=False}" Grid.Column="1" Content="Partial" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
+		<CheckBox x:Name="Partial" IsChecked="{Binding Path=OpenType.Partial, FallbackValue=False}" Grid.Column="1" Content="Partial" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
 		<CheckBox x:Name="Abstract" IsChecked="{Binding Path=OpenType.Abstract, FallbackValue=False}" Grid.Column="2" Content="Abstract" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="Abstract_Checked" Unchecked="Abstract_Unchecked" />
 		<CheckBox x:Name="Sealed" IsChecked="{Binding Path=OpenType.Sealed, FallbackValue=False}" Grid.Column="3" Content="Sealed" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="Sealed_Checked" Unchecked="Sealed_Unchecked" />
-		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource ClassTypeConverter}}" Grid.Column="4" Content="Class" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="ClassType_Checked" />
-		<RadioButton IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource StructTypeConverter}}" Grid.Column="5" Content="Struct" Margin="5" Visibility="{Binding Path=CanSetType, Converter={StaticResource BoolVisibilityConverter}, ConverterParameter='True'}" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="StructType_Checked" />
+		<RadioButton x:Name="ClassType" IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource ClassTypeConverter}}" Grid.Column="4" Content="Class" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="ClassType_Checked" />
+		<RadioButton x:Name="StructType" IsChecked="{Binding Path=OpenType.TypeMode, Converter={StaticResource StructTypeConverter}}" Grid.Column="5" Content="Struct" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" Checked="StructType_Checked" />
 		<pc:TextBox Text="{Binding Path=OpenType.Name, FallbackValue='', UpdateSourceTrigger=PropertyChanged}" Grid.Column="6" LabelText="Name" Margin="5" IsEnabled="{Binding Path=IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type ContentControl}}}" />
 		<Grid x:Name="InheritedTypesGrid" Grid.Row="1" Grid.ColumnSpan="7" Visibility="Collapsed" >
 			<Grid.ColumnDefinitions>
@@ -74,7 +74,7 @@
 									<RowDefinition Height="22" />
 								</Grid.RowDefinitions>
 								<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
-								<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
+								<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 									<Image Source="pack://application:,,,/WCFArchitect;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 								</Button>
 							</Grid>
