--- a/Designer/Interface/Host/Host.xaml
+++ b/Designer/Interface/Host/Host.xaml
@@ -5,7 +5,7 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
 	xmlns:c1="http://schemas.componentone.com/wpf/Basic"
 	xmlns:c1datetime="http://schemas.componentone.com/wpf/DateTimeEditors"
-	xmlns:pc="clr-namespace:Prospective.Controls;assembly=Prospective.Controls"
+	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
 	xmlns:Host="clr-namespace:WCFArchitect.Interface.Host"
 	xmlns:Data="clr-namespace:WCFArchitect.Interface.Data"
 	xmlns:Projects="clr-namespace:WCFArchitect.Projects;assembly=WCFArchitect.Projects"
@@ -478,6 +478,9 @@
 					</Grid>
 				</GroupBox>
 			</Grid>
+		</TabItem>
+		<TabItem Header="Documentation" FontSize="12pt">
+			<Docs:Class x:Name="Docs" Margin="5" Documentation="{Binding Path=Data.Documentation}" />
 		</TabItem>
 	</TabControl>
 </Grid>
